jello changelog

202107xx v1.4.5 (in progress)
- include CHANGELOG in source distribution

20210626 v1.4.4
- Rename internal variables so they don't collide with user defined names
- Clean up user runtime environment of unused variables

20210623 v1.4.3
- Update html formatting tests to only run if Pygments v2.9.0 is installed
- Fix typo in man page
- Fix tests failing on non-AMD64 architectures due to non-sorted set

20210622 v1.4.2
- Add MANIFEST.in file to project root to add man page to source

20210621 v1.4.1
- Add validation for type annotation option in initialization file

20210614 v1.4.0
- Add type annotation option for Schema view
- Enhance error handling when a dict method is accessed (e.g. .get)
- Enhance exception error messages
- Pygments library dependency is now optional
- Code refactor to split cli from lib

20210609 v1.3.6
- Documentation fixes for packages and binaries hosting

20210609 v1.3.5
- Enhance lines output to support colors
- Enhance raw output to force monochrome output

20210609 v1.3.4
- Documentation fixes

20210608 v1.3.3
- Raise exception while creating JSON for non-serializable objects

20210608 v1.3.2
- Fix JSON strings with UTF-8 characters in Schema output

20210608 v1.3.1
- Fix regression with JELLO_COLORS environment variable

20210608 v1.3.0
- Add ability to use dot notation
- Add more version information
- Enhance performance and memory utilization for larger datasets
- Enhance JSON strings to output UTF-8 characters instead of escaped codes
- Enhance compact output to be even more compact by removing extra spaces
- Add tests for python 3.9

20210524 v1.2.11
- Fix colors on Windows
- Fix unrecognized characters in README.md for Windows
- Create MSI installer for Windows

20200909 v1.2.10
- Add 'as_lib' option to pyquery and load_json to allow raising exceptions when being used as a module

20200728 v1.2.9
- Use sys.exit() for pyoxidizer support

20200614 v1.2.8
- Improve handling of blank input

20200612 v1.2.7