@@ -1,7 +1,7 @@
 """jello - query JSON at the command line with python syntax"""
 
 
-__version__ = '1.4.4'
+__version__ = '1.4.5'
 AUTHOR = 'Kelly Brazil'
 WEBSITE = 'https://github.com/kellyjonbrazil/jello'
 COPYRIGHT = '© 2020-2021 Kelly Brazil'
